terraform/ec2.tf
data "aws_ami" "my_ami" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }
}

# 1. Web Server (Public)
module "web_server" {
  source  = "terraform-aws-modules/ec2-instance/aws"
  version = "~> 6.0"

  name                   = "devops-web-server"
  ami                    = data.aws_ami.my_ami.id
  instance_type          = "t3.small"
  subnet_id              = module.my_vpc.public_subnets[0]
  create_security_group  = false
  vpc_security_group_ids = [aws_security_group.devops_public_sg.id]
  private_ip             = "10.0.0.5"
  key_name               = "dani21894-key"
  root_block_device      = { size = 16 }

  tags = { Name = "devops-web-server" }
}

resource "aws_eip" "web_server_eip" {
  domain   = "vpc"
  instance = module.web_server.id

  tags = { Name = "devops-web-server-eip" }
}

# 2. Ansible Controller (Private)
module "ansible_controller" {
  source  = "terraform-aws-modules/ec2-instance/aws"
  version = "~> 6.0"

  name                   = "devops-ansible-controller"
  ami                    = data.aws_ami.my_ami.id
  instance_type          = "t3.small"
  subnet_id              = module.my_vpc.private_subnets[0]
  create_security_group  = false
  vpc_security_group_ids = [aws_security_group.devops_private_sg.id]
  private_ip             = "10.0.0.135"
  key_name               = "dani21894-key"
  root_block_device      = { size = 16 }

  tags = { Name = "devops-ansible-controller" }
}

# 3. Monitoring Server (Private)
module "monitoring_server" {
  source  = "terraform-aws-modules/ec2-instance/aws"
  version = "~> 6.0"

  name                   = "devops-monitoring-server"
  ami                    = data.aws_ami.my_ami.id
  instance_type          = "t3.small"
  subnet_id              = module.my_vpc.private_subnets[0]
  create_security_group  = false
  vpc_security_group_ids = [aws_security_group.devops_private_sg.id]
  private_ip             = "10.0.0.136"
  key_name               = "dani21894-key"
  root_block_device      = { size = 16 }

  tags = { Name = "devops-monitoring-server" }
}
